--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -50,6 +50,12 @@
 	<!-- modal start  -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- modal end -->
+
+	<!-- start jsuites -->
+	<script src="https://jsuites.net/v4/jsuites.js"></script>
+	<link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
+	<!-- end jsuites -->
+
     <style type="text/css">
         	#work-information,
 			#skills-information,
