--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -215,11 +215,11 @@
 			}
 
 			/* Default styles for labels and inputs */
-			label,
+			/* label,
 			input {
 				display: block;
 				margin-bottom: 10px;
-			}
+			} */
 
 			/* Styles for mobile devices */
 			@media only screen and (max-width: 600px) {
@@ -240,13 +240,11 @@
 			@media only screen and (min-width: 601px) {
 				input {
 					display: inline-block;
-					width: 50%;
 					margin-right: 10px;
 				}
 
 				label {
 					display: inline-block;
-					width: 40%;
 					margin-right: 10px;
 				}
 			}
@@ -255,12 +253,14 @@
         height: 100%;
         border-radius: 10px;
         padding: 50px;
-        /* text-align: center; */
+        text-align: center;
         position: relative;
 
 
      }
     </style>
+	{% block style %}
+	{% endblock style %}
     
 </head>
 
