--- a/resume/templates/resume/finalize.html
+++ b/resume/templates/resume/finalize.html
@@ -3,6 +3,8 @@
 {% block content %}
 {% load static %}
 
+{% block head %}
+{% endblock head %}
 <meta name="csrf-token" content="{{ csrf_token }}">
 
 
