--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -53,6 +53,7 @@
 
 	<!-- start jsuites -->
 	<script src="https://jsuites.net/v4/jsuites.js"></script>
+	<script src="https://jsuites.net/v4/jsuites.webcomponents.js"></script>
 	<link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
 	<!-- end jsuites -->
 
