--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -256,9 +256,10 @@
         padding: 50px;
         text-align: center;
         position: relative;
-
-
-     }
+	}
+		.jrating .jrating-selected {
+		background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='green'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+	}
     </style>
 	{% block head %}
 	{% endblock head %}
